<resources>
    <string name="app_name">New Internal Sourcing App</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="mother_first_name">Mother First Name</string>
    <string name="mother_middle_name">Mother Middle Name</string>
    <string name="mother_last_name">Mother Last Name</string>
    <string name="father_first_name">Father First Name</string>
    <string name="father_middle_name">Father Middle Name</string>
    <string name="father_last_name">Father Last Name</string>
    <string name="spouse_first_name">Spouse First Name</string>
    <string name="spouse_middle_name">Spouse Middle Name</string>
    <string name="spouse_last_name">Spouse Last Name</string>
    <string name="expense_monthly">Expense(monthly)</string>
    <string name="future_income">Future Income(Annual)</string>
    <string name="agriculture_income">Agriculture Income(Annual)</string>
    <string name="earning_member_type">Earning Member Type</string>
    <string name="select_bank">Select Bank</string>
    <string name="loan_duration_month">Loan Duration(month)</string>
    <string name="term_and_conditions"><b><u>TERMS &amp; CONDITIONS FOR ONLINE PAYMENTS TO BE MADE TO PAISALO DIGITAL LTD</u></b> \n
          Name of NBFC:. <b>PAISALO DIGITAL LTD</b>\n\tCSC POCKET 52 CR PARK NEAR POLICE STATION \n\tNEW DELHI -110019\n\tWWW.PAISALO.IN
        \n\n<b>Online Charges Payments</b>:
This online payment system is provided by PAISALO DIGITAL LTD . The PAISALO DIGITAL LTD  may update these terms from time to time and any changes will be effective immediately on being set out on this portal. Please ensure that you are aware of the current terms. The country of domicile of PAISALO DIGITAL LTD  is India and legal jurisdiction is New Delhi, India.

Please read these terms carefully before using the online payment facility. Using the Online payment facility on this website indicates that you accept these terms. If you do not accept these terms do not use this facility.
\n
All payments are subject to the following conditions:\n
 * The description of items is specific to you when you log in with your user id and unique password.\n
 * All Charges quoted are in Indian Rupees.\n
 * PAISALO DIGITAL LTD  reserves the right to change the Charges at any time.\n
 * Your payment to PAISALO DIGITAL LTD , will normally reach PAISALO DIGITAL LTD  account, within two working days.\n
 * We cannot accept liability for a payment not reaching the correct account of PAISALO DIGITAL LTD
   , due to quoting an incorrect account number or incorrect details, by you. Neither can we accept liability if payment is refused or declined by the Net banking/credit/debit card supplier for any reason.\n
 * If the Banker/card supplier declines payment, PAISALO DIGITAL LTD  is under no obligation to bring this fact to your attention.\n
 *It is for you (the Customer) to check with your bank/credit/debit card supplier that payment has been deducted from your account.\n
 * In no event, PAISALO DIGITAL LTD  will be liable for any damages whatsoever arising out of the use, computer virus, malware, inability to use, or the results of use of this site or any websites linked to this site, or the materials or information contained at any or all such sites, whether based on warranty, contract, tort or any other legal theory and whether or not advised of the possibility of such damages.
        \n\n<b>Refund Policy :</b>
Refunds, if applicable, at the discretion of the Management, will only be made as per the sources of Net Banking/debit/credit card used for the original transaction. For the avoidance of doubt, nothing in this Policy shall require PAISALO DIGITAL LTD  to refund the Charges (or part thereof) unless such Charges (or part thereof) have previously been paid by the customer through online payment mode and the same has been credited into the accounts of PAISALO DIGITAL LTD  and has the approval of the Management for refund. The Refunded amount will be credited back to source account within 7 working days.
        \n\n<b>Cancel and Return Policy :</b>
Cancel and Return, if applicable, at the discretion of the Management, will only be made as per the sources of Net Banking/debit/credit card used for the original transaction. For the avoidance of doubt, nothing in this Policy shall require PAISALO DIGITAL LTD  to Cancel and Return the Charges (or part thereof) unless such Charges (or part thereof) have previously been paid by the customer through online payment mode and the same has been credited into the accounts of PAISALO DIGITAL LTD  and has the approval of the Management for Cancel and Return. The cancellation and return will take up to 20 working days.
Privacy Policy
This Privacy Policy applies to all of the Fees, Payment of Dues, Charges and related payments payable to PAISALO DIGITAL LTD through online mode. Sometimes, we may post specific privacy notices to explain in more detail. If you have any questions about this Privacy Policy, please feel free to contact us through our email DELHI@PAISALO.IN
Changes to our Privacy Policy
PAISALO DIGITAL LTD  reserves the entire right to modify / amend / remove this privacy statement anytime and without any reason. Nothing contained herein creates or is intended to create a contract/agreement between PAISALO DIGITAL LTD  and any user visiting the website or providing Identifying information of any kind.
        \n\n<b>DND Policy:</b>
If you wish to stop any further sms/email alerts/contacts from our side, all you need to do is to send an email to DELHI@PAISALO.IN with your registered mobile number and you will be excluded from the ‘alerts list’.
Contact Email <i>DELHI@PAISALO.IN</i>
        \n\n<b>Terms of Payment:</b>\n

1. Charges, Taxes applicable for online payment through Payment Gateway will be borne by the customer.\n
2. In respect of any failed transactions of any of the Customers, processed through this service, the amount will be refunded after deducting the transaction charges.
</string>
    <string name="terms_amp_conditions"><i><u>terms &amp; conditions</u></i></string>
    <string name="branch"> शाखा</string>
    <string name="area"> क्षेत्र</string>
    <string name="centre"> केन्द्र</string>
    <string name="group"> समूह</string>
    <string name="date"> दिनांक</string>
    <string name="verificationLevel1"> सत्यापन स्तर 1</string>
    <string name="verificationLevel2"> सत्यापन स्तर 2</string>
    <string name="verificationLevel3"> सत्यापन स्तर 3</string>
    <string name="verificationLevel4"> सत्यापन स्तर 4</string>
    <string name="verificationLevel5"> सत्यापन स्तर 5</string>
    <string name="verificationLevel6"> सत्यापन स्तर 6</string>
    <string name="verificationLevel7"> सत्यापन स्तर 7</string>
    <string name="ggt"> जीजीटी दिवस एक दिनांक</string>
    <string name="customerName"> ग्राहक का नाम</string>
    <string name="sendAreaOffice"> क्षेत्रीय कार्यालय भेजा</string>
    <string name="receivedAreaOffice"> क्षेत्रीय कार्या प्राप्ति दिनांक</string>
    <string name="debtOfficeReceivedDate"> ऋण विभाग को प्राप्ति दिनांक</string>
    <string name="opc"> कओपीएस की फुल फॉर्म चाहिए</string>
    <string name="settlementPeriod"> पुनर्भुगतान आवृति साप्ताहिक</string>
    <string name="houseVerificationDate"> निवास गृह की जाँच की तिथि</string>
    <string name="grtDate"> जीआरटी दिनाक</string>
    <string name="customer"> ग्राहक</string>
    <string name="office_address"> व्यापार स्थल का पता</string>
    <string name="residing_with"> रहने वाले</string>
    <string name="family"> परिवार</string>
    <string name="separately"> अलग से</string>
    <string name="mother_hv">Mother</string>
    <string name="father_hv">Father</string>
    <string name="applicant_status"> आवेदक की स्थिति</string>
    <string name="Not_Handicapped"> विकलांग नहीं</string>
    <string name="interviewee_name"> साक्षात्कार किये गये व्यक्ति का नाम</string>
    <string name="interviewee_age"> साक्षात्कार किये गये व्यक्ति की आयु</string>
    <string name="intervieweeRelation"> आवेदक के साथ साक्षात्कार किये गये व्यक्ति का संबंध</string>
    <string name="spouse"> जीवनसाथी</string>
    <string name="parents"> पिता/माता</string>
    <string name="siblings"> भाई/बहन</string>
    <string name="husband"> पति</string>
    <string name="father"> पिता</string>
    <string name="brother"> भाई</string>
    <string name="wife"> पत्नी</string>
    <string name="mother"> माता</string>
    <string name="sister"> बहन</string>
    <string name="notRented"> मकान किराये पर नहीं है</string>
    <string name="residence_type"> निवास का प्रकार</string>
    <string name="pucca"> पक्का</string>
    <string name="kaccha"> कच्चा</string>
    <string name="residental_stability"> आवासीय स्थिरता (वर्ष)</string>
    <string name="distance_ApplicantToDealer"> आवेदक के निवास से शाखा/डीलर बिंदु तक की दूरी (किमी में)</string>
    <string name="time_ApplicantToDealer"> शाखा/डीलर के स्थान से आवेदक के निवास तक पहुंचने के लिए आवश्यक समय(मिनट)</string>
    <string name="businessExperience"> वर्तमान व्यवसाय में कुल अनुभव (वर्षों में)</string>
    <string name="businessExpenditure"> व्यवसाय का कुल मासिक व्यय</string>
    <string name="expectedIncome"> पैसालो से प्रस्तावित ऋण के बाद प्रस्तावित शुद्ध मासिक आय</string>
    <string name="houseExpenditure"> कुल मासिक घरेलू खर्च</string>
    <string name="familyNetIncome"> परिवार के अन्य सदस्यों की शुद्ध मासिक आय</string>
    <string name="relationWithApplicant"> आवेदक के साथ अन्य कमाने वाले सदस्य का संबंध</string>
    <string name="reference1"> संदर्भ व्यक्ति का नाम 1</string>
    <string name="reference_PhoneNo"> फोन नंबर</string>
    <string name="reference2"> संदर्भ व्यक्ति का नाम 2</string>
    <string name="neighbourhood_verification"> आस-पास के निवासियों से आवेदक की प्रतिक्रिया</string>
    <string name="good"> अच्छा</string>
    <string name="bad"> खराब</string>
    <string name="dontKnow"> पता नहीं</string>
    <string name="Address">व्यवसाय स्थान का पता</string>
    <string name="verification"> सत्यापन</string>
    <string name="aadhar_age">Age</string>
    <string name="aadhar_gender">Gender</string>
    <string name="esign">E-Sign</string>
    <string name="umeed">UMEED</string>
    <string name="pragati">PRAGATI</string>
    <string name="vikas">VIKAS</string>
    <string name="udaan">UDAAN</string>
    <string name="loanamount">Loan Amount</string>
    <string name="mobile">Mobile</string>
    <string name="guardian">Guardian :</string>
    <string name="relationship">Relationship</string>
    <string name="health">Health</string>
    <string name="education">Education</string>
    <string name="school_type">School Type</string>
    <string name="business">Business</string>
    <string name="business_type">Business Type</string>
    <string name="income">Income</string>
    <string name="income_type">Income Type</string>
    <string name="add_update">ADD/UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="lender_name">Lender Name</string>
    <string name="lender_type">Lender Type</string>
    <string name="emi_amount">EMI Amount</string>
    <string name="balance_amount">Balance Amount</string>
    <string name="Cancel">CANCEL</string>
    <string name="e_signing">E-Signing</string>
    <string name="select_a_Scheme">Select a Scheme</string>
    <string name="loan_used_by">Loan used by</string>
    <string name="reason_For_Loan">Reason For Loan</string>
    <string name="is_MFI">Is MFI</string>
    <string name="language">Language / भाषा</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="bengali">Bengoli</string>
    <string name="name">NAME</string>
</resources>