<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/femmemincomecardview"
        android:layout_width="match_parent"
        android:backgroundTint="@color/red"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        app:cardCornerRadius="16dp"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">

    <TextView
        android:id="@+id/membername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/heading"
        android:fontFamily="@font/visbycfregular"
        android:text="@string/name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/memgender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading"
                    android:fontFamily="@font/visbycfregular"
                    android:text="@string/aadhar_gender"/>

                <TextView
                    android:id="@+id/memage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading"
                    android:fontFamily="@font/visbycfregular"
                    android:text="@string/aadhar_age"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/memeducation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading"
                    android:fontFamily="@font/visbycfregular"
                    android:text="@string/education"/>

                <TextView
                    android:id="@+id/memhealth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading"
                    android:fontFamily="@font/visbycfregular"
                    android:text="@string/health"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/memschooltype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading"
                    android:fontFamily="@font/visbycfregular"
                    android:text="@string/school_type"/>

                <TextView
                    android:id="@+id/membusiness"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading"
                    android:fontFamily="@font/visbycfregular"
                    android:text="@string/business"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/memrelationship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading"
                    android:fontFamily="@font/visbycfregular"
                    android:text="@string/relationship"/>

                <TextView
                    android:id="@+id/membusinesstype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading"
                    android:fontFamily="@font/visbycfregular"
                    android:text="@string/business_type"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/memincome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading"
                    android:fontFamily="@font/visbycfregular"
                    android:text="@string/income"/>

                <TextView
                    android:id="@+id/memincometype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/heading"
                    android:fontFamily="@font/visbycfregular"
                    android:text="@string/income_type"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>