<!-- res/layout/custom_dialog.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/red"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<TextView
    android:text="@string/select_a_Scheme"
    android:textAlignment="center"
    android:textSize="20dp"
    android:padding="6dp"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="@dimen/margin_6dp"
        app:cardElevation="@dimen/margin_6dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/umeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/umeed"
            android:textColor="@color/red"
            android:textSize="16dp"/>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="@dimen/margin_6dp"
        app:cardElevation="@dimen/margin_6dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/pragati"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pragati"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/red"
            android:textSize="16dp"/>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="@dimen/margin_6dp"
        app:cardElevation="@dimen/margin_6dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/vikas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/vikas"
            android:textColor="@color/red"
            android:textSize="16dp"/>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="@dimen/margin_6dp"
        app:cardElevation="@dimen/margin_6dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/udaan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/udaan"
            android:textColor="@color/red"
            android:textSize="16dp"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>
