<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popupborder"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lender_name"
        android:textColor="@color/red" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/LenderName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/lender_name"
            android:inputType="textCapCharacters
"
            android:padding="10dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/lender_type"
        android:textColor="@color/red" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardElevation="2dp">

        <Spinner
            android:id="@+id/lenderType"
            android:layout_width="match_parent"

            android:layout_height="45dp"
            android:entries="@array/lenderType" />

    </androidx.cardview.widget.CardView>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/loan_used_by"
        android:textColor="@color/red" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinnerOptions2"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/reason_For_Loan"
        android:textColor="@color/red" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:elevation="2dp">

        <Spinner
            android:id="@+id/spinnerOptions3"
            android:layout_width="match_parent"
            android:layout_height="45dp" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loanamount"
                android:textAlignment="center"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/editLoanamount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emi_amount"
                android:textAlignment="center"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/editTextEmiamount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:inputType="number"
                android:padding="10dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/balance_amount"
                android:textAlignment="center"
                android:textColor="@color/red" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:elevation="2dp">

                <EditText
                    android:id="@+id/balanceamount"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:inputType="number"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/is_MFI"
                android:textAlignment="center"
                android:textColor="@color/red" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:elevation="2dp">

                <Spinner
                    android:id="@+id/isMFI"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"

                    android:entries="@array/ismfi"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/addBorrowings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/add_update" />

        <Button
            android:id="@+id/deleteBorrowings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/delete" />

        <Button
            android:id="@+id/cancelBorrowings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/Cancel" />

    </LinearLayout>
</LinearLayout>